fix contrast

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -85,11 +85,15 @@ a:hover {
 }
 
 figcaption, .discreet {
-	color: var(--grey600);
+	color: var(--grey700);
 }
 
 .discreet a {
-	color: var(--blue500);
+	color: var(--blue600);
+}
+
+.discreet a:hover {
+	color: var(--blue700);
 }
 
 figcaption {
@@ -167,7 +171,13 @@ figure {
 /* responsive */
 
 @media only screen and (min-width: 40em) {
+}
+
+@media only screen and (min-width: 62em) {
 	.float-right {
 		float: right;
 	}
+}
+
+@media only screen and (min-width: 75em) {
 }
